# laby_cpp

kolos1/: CMakeLists.txt  main.cpp  zderzacz.cpp  zderzacz.h
lab6 para/: CMakeLists.txt
laby 5 generator/: CMakeLists.txt  generator.cpp  generator.h  main.cpp
laby 6 parabola i operatory/: CMakeLists.txt  main.cpp  parabola.cpp
laby 7 macierze/: CMakeLists.txt  macierz.cpp  macierz.h  main.cpp
laby nr6/: CMakeLists.txt  main.cpp  parabola.cpp  parabola.h
laby4 generator/: main.cpp  parabola.cpp  parabola.h
laby4 parabola/: CMakeLists.txt  main.cpp  parabola.cpp  parabola.h
