cmake_minimum_required(VERSION 3.26)
project(parabola)

set(CMAKE_CXX_STANDARD 17)

add_executable(parabola main.cpp
        parabola.cpp
        parabola.h
        "../laby 6 parabola i operatory/main.cpp"
        "../laby 6 parabola i operatory/parabola.cpp"
        "../laby 6 parabola i operatory/parabola.h")
